render: 2D 3D with or without GPU

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,18 @@ set (CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/sdl2)
 
+include(FetchContent)
+FetchContent_Declare(
+  CLI11
+  URL https://github.com/CLIUtils/CLI11/archive/v1.8.0.tar.gz
+  )
+FetchContent_MakeAvailable(CLI11)
+
 # Compilation flags
-set(CXXFLAGS -Wall -Wextra -pedantic -ggdb -g -std=c++17)
-set(CUDAFLAGS "--compiler-options=-Wall -Wextra -ggdb -g" -G -g)
+set(CXXFLAGS -Wall -Wextra -pedantic -O5 -std=c++17)
+set(CUDAFLAGS "--compiler-options=-Wall -Wextra -O5")
+#set(CXXFLAGS -Wall -Wextra -pedantic -ggdb -g -std=c++17)
+#set(CUDAFLAGS "--compiler-options=-Wall -Wextra -ggdb -lineinfo" -G -g)
 add_compile_options(
   "$<$<COMPILE_LANGUAGE:CXX>:${CXXFLAGS}>"
   "$<$<COMPILE_LANGUAGE:CUDA>:${CUDAFLAGS}>"
@@ -28,5 +37,5 @@ file (GLOB_RECURSE CU_SOURCES "src/*.cu")
 add_executable (${PROJECT_NAME} ${SOURCES} ${CU_SOURCES})
 #target_compile_features (${PROJECT_NAME} PUBLIC cxx_std_17)
 set_target_properties(${PROJECT_NAME} PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
-target_link_libraries(${PROJECT_NAME} SDL2::Main SDL2::TTF)
+target_link_libraries(${PROJECT_NAME} SDL2::Main SDL2::TTF CLI11::CLI11)
 
